feat: home page finished

--- a/index.html
+++ b/index.html
@@ -15,12 +15,45 @@
         <h1>Home</h1>
         <nav class="main-nav">
             <ul class="nav-list">
-                <li class="nav-list"><a href="index.html"></a>Home</li>
-                <li class="nav-list"><a href="./pages/sobre.html"></a>Sobre</li>
-                <li class="nav-list"><a href="./pages/contato.html"></a>Contato</li>
+                <li class="nav-list"><a href="index.html">Home</a></li>
+                <li class="nav-list"><a href="./pages/sobre.html">Sobre</a></li>
+                <li class="nav-list"><a href="./pages/contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
+
+    <main class="main-content">
+        <article class="article">
+            <header class="article-header">
+                <h2 class="article-title">Bem-Vindo ao meu site</h2>
+                <p class="section-text">texto aleatório na aula de marcação web</p>
+            </header>
+            <section class="article-content">
+                <h3 class="section-title">Introdução</h3>
+                <p class="section-text">Este conteúdo é introdutório do artigo</p>
+                <figure class="image-figure"><img src="./image/totoro.jpg" alt="Totoro" class="article-image"></figure>
+                <figcaption class="image-caption">Totoro</figcaption>
+                <audio controls class="audio-player">
+                    <source src="./media/audio.mp3" type="audio/mp3"> Seu navegador nao suporta a tag audio
+                </audio>
+            </section>
+            <footer class="article-footer">
+                <p class="section-text">testando o rodapé do conteúdo principal</p>
+            </footer>
+        </article>
+        <aside class="sidebar">
+            <h2 class="sidebar-title">Informações Adicionais</h2>
+            <p class="sidebar-text">Este é um conteúdo complementar</p>
+        </aside>
+    </main>
+    <footer class="site-footer">
+        <address class="contact-info">
+            <p class="author-name">Autor: Luiz Gabriel</p>
+            <p class="author-email">E-mail: <a href="mailto:luiz.g.carvalho11@aluno.senai.br" class="email-link">luiz.g.carvalho11@aluno.senai.br
+                </a></p>
+        </address>
+        <p class="footer-copy">&copy; 2024 Meu Site, Todos os direitos reservados!</p>
+    </footer>
 </body>
 
 </html>
