feat:finished css of the home

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h1>Home</h1>
         <nav class="main-nav">
             <ul class="nav-list">
-                <li class="nav-list"><a href="index.html">Home</a></li>
-                <li class="nav-list"><a href="./pages/sobre.html">Sobre</a></li>
-                <li class="nav-list"><a href="./pages/contato.html">Contato</a></li>
+                <li class="nav-list"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-list"><a href="./pages/sobre.html" class="nav-link">Sobre</a></li>
+                <li class="nav-list"><a href="./pages/contato.html" class="nav-link">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -49,7 +49,8 @@
     <footer class="site-footer">
         <address class="contact-info">
             <p class="author-name">Autor: Luiz Gabriel</p>
-            <p class="author-email">E-mail: <a href="mailto:luiz.g.carvalho11@aluno.senai.br" class="email-link">luiz.g.carvalho11@aluno.senai.br
+            <p class="author-email">E-mail: <a href="mailto:luiz.g.carvalho11@aluno.senai.br"
+                    class="email-link">luiz.g.carvalho11@aluno.senai.br
                 </a></p>
         </address>
         <p class="footer-copy">&copy; 2024 Meu Site, Todos os direitos reservados!</p>
