--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
         <h1>Home</h1>
         <nav class="main-nav">
             <ul class="nav-list">
-                <li class="nav-list"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-list"><a href="../index.html" class="nav-link">Home</a></li>
                 <li class="nav-list"><a href="./pages/sobre.html" class="nav-link">Sobre</a></li>
                 <li class="nav-list"><a href="./pages/contato.html" class="nav-link">Contato</a></li>
             </ul>
         </nav>
     </header>
-
     <main class="main-content">
         <article class="article">
             <header class="article-header">
